# Harvard-Applied-Quant-Finance-ML

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: portfolio_excess_returns_100_daily.parquet
docs/: index.html
notebooks/: aqfml-final-project.ipynb
results/: ff100_portfolio_return_stats.csv
src/: __init__.py  config.py  diagnostics.py  features.py  implementation.py  pipeline.py  plots.py  portfolio.py  signals.py  utils.py
src/models/: baselines.py  neural_network.py  random_forest.py
